<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true"
    tools:context=".ItemDetailActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Notes" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100">

                <TextView
                    android:id="@+id/labelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_title"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/note_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/note_title_edit"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_title_edit"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/darkGrey"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <!-- dropdown-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/labelDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_mood"
                    android:textColor="@color/grey" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/note_emotion_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="334dp"
                    android:layout_height="wrap_content"
                    android:ems="115"
                    android:hint="@string/how_are_you_feeling_today"
                    android:textColor="@color/white"
                    android:textColorHint="@color/darkGrey"
                    app:boxStrokeColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/note_title_edit">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:boxStrokeColor="@color/white"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:weightSum="100">

                <TextView
                    android:id="@+id/labelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_text"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/note_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/note_text_edit"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_text_edit"
                    android:inputType="textCapSentences|textMultiLine"
                    android:scrollHorizontally="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/darkGrey"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dropdown_field" />

            </LinearLayout>


            <!--            <EditText-->
            <!--                android:id="@+id/input_name"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:inputType="text" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/input_date"-->
            <!--                style="@android:style/Widget.DatePicker"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:inputType="date" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/input_duration"-->
            <!--                style="@android:style/Widget.Material.NumberPicker"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:inputType="number" />-->
            <!--            <EditText-->
            <!--                android:id="@+id/input_location"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:inputType="text" />-->
            <!--            <EditText-->
            <!--                android:id="@+id/input_notes"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:inputType="text" />-->
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/item_detail_container"
        app:layout_anchorGravity="top|end"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>